# llist

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.bat  llist_internal.h
.github/workflows/: analysis.yml  cross-platform.yml  docs.yml  release.yml  windows-ci.yml
cmake/: llistConfig.cmake.in
include/: llist.h
src/: llist.c
tests/: CMakeLists.txt  test_llist.c  test_log.h  test_utils.h
